--- a/public/chord.html
+++ b/public/chord.html
@@ -206,20 +206,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org0db9501">Chord</a></li>
+<li><a href="#orgc6ad5f6">Chord</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org0db9501" class="outline-2">
-<h2 id="org0db9501">Chord</h2>
-<div class="outline-text-2" id="text-org0db9501">
+<div id="outline-container-orgc6ad5f6" class="outline-2">
+<h2 id="orgc6ad5f6">Chord</h2>
+<div class="outline-text-2" id="text-orgc6ad5f6">
 <p>
 In 2016, when I was learning Python, I designed this UI for a MIDI generating tool using <a href="https://py.processing.org/">processing mode for python</a>. The code is rather hacky but the diagram is interesting so I share it here. It is based on the circle of 5ths but illustrates some other interesting symmetries and patterns.
 </p>
 
 
-<div id="org52fc966" class="figure">
+<div id="orgffbf20e" class="figure">
 <p><img src="images/chord.png" alt="chord.png" />
 </p>
 </div>
