--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,12 @@ hi im luke this is my blog and stuff i made
 </thead>
 <tbody>
 <tr>
+<td class="org-left"><a href="fish.html">the sea</a></td>
+<td class="org-left">writing, poetry</td>
+<td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2025-01-17 Fri]</span></span></td>
+</tr>
+
+<tr>
 <td class="org-left"><a href="dwarves.html">the ultimate charm</a></td>
 <td class="org-left">writing, fiction</td>
 <td class="org-left"><span class="timestamp-wrapper"><span class="timestamp">[2024-12-30 Mon]</span></span></td>
@@ -371,7 +377,7 @@ hi im luke this is my blog and stuff i made
 </table>
 
 
-<div id="org1b0469c" class="figure">
+<div id="org3e567ca" class="figure">
 <p><img src="images/waveforms.png" alt="waveforms.png" width="150" />
 </p>
 </div>
