--- a/public/into_this_wired_abyss.html
+++ b/public/into_this_wired_abyss.html
@@ -206,14 +206,14 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org721e63a">Into This Wired Abyss</a></li>
+<li><a href="#org0d8eefe">Into This Wired Abyss</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org721e63a" class="outline-2">
-<h2 id="org721e63a">Into This Wired Abyss</h2>
-<div class="outline-text-2" id="text-org721e63a">
+<div id="outline-container-org0d8eefe" class="outline-2">
+<h2 id="org0d8eefe">Into This Wired Abyss</h2>
+<div class="outline-text-2" id="text-org0d8eefe">
 <p>
 A series of compilations that I curated, showcasing various friends, collaborators and talented noise makers from the alternative electronic music world from 2012 to 2015
 </p>
